add support for owl / sparql / json-ld ontology & query
