# fuse-domain/fuse-domain-knowledge/fuse-domain-knowledge-ext/src/main/java/com/yangdb/fuse/services/KnowledgeExtensionQueryController.java
@@ -86,6 +86,11 @@ public class KnowledgeExtensionQueryController implements QueryController<QueryC
     }
 
     @Override
+    public ContentResponse<Object> findPath(String ontology, String sourceEntity, String sourceId, String targetEntity, String targetId, String relationType, int maxHops) {
+        return controller.findPath(ontology,sourceEntity, sourceId, targetEntity, targetId, relationType, maxHops);
+    }
+
+    @Override
     public ContentResponse<Object> runCypher(String cypher, String ontology) {
         return controller.runCypher(cypher,ontology);
     }
